--- a/src/components/atoms/Option/Option.module.scss
+++ b/src/components/atoms/Option/Option.module.scss
@@ -47,7 +47,7 @@
     box-sizing: border-box;
 
     &:hover:not(.selected) {
-        border: 1px solid rgba(255, 255, 255, 0.79);
+        border: 0.063rem solid rgba(255, 255, 255, 0.79);
     }
 
     &.selected {
